--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1732,3 +1732,17 @@ input#NewsletterForm--footer:hover, input#NewsletterForm--footer:focus {
   padding-top: 2.4rem;
   padding-bottom: 2.4rem;
 }
+
+.resp-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+
+.resp-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
