--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1746,3 +1746,7 @@ input#NewsletterForm--footer:hover, input#NewsletterForm--footer:focus {
   width: 100%;
   height: 100%;
 }
+
+.card-wrapper {
+  height: auto !important;
+}
