--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -17,6 +17,9 @@
       content: '';
       display: block;
     }
+    .image_banner_link{
+      position: relative;
+    }
   }
 
   @media screen and (min-width: 750px) {
