--- a/snippets/breadcrumb.liquid
+++ b/snippets/breadcrumb.liquid
@@ -3,7 +3,7 @@
         <div class="breadcrumbs pt-15">
             <div class="container">
                 <ul class="list-unstyled d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                    <li><a href="/" >Shop</a></li>
+                    <li><a href="/" >Home</a></li>
                     {%- if template contains 'page' -%}
                         <li><span>{{ page.title }}</span></li>
                     {%- elsif template contains 'product' -%}
