--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -39,3 +39,9 @@
 .facets-container .facet-filters__sort:focus-visible{
     box-shadow: unset;
 }
+.facets-container .facet-checkbox--disabled{
+    color: red;
+}
+.product-media-modal .product-media-modal__toggle{
+    background-color: #fff;
+}
