--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -48,3 +48,18 @@
 .badge.color-inverse{
     color: #fff;
 }
+#mybutton-wrapper{
+    width: 100%;
+    position: relative;
+    margin: 0 auto 5px;
+    overflow: hidden;
+    clear: both;
+    text-align: center;
+}
+#mybutton-wrapper .mybutton{
+    display: inline-block;
+    margin: 0 5px;
+}
+#mybutton-wrapper .mybutton a{
+    text-decoration: none;
+}
