--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -63,3 +63,6 @@
 #mybutton-wrapper .mybutton a{
     text-decoration: none;
 }
+.collection-hero__title + .collection-hero__description{
+    display: none;
+}
