--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1857,3 +1857,19 @@ input#NewsletterForm--footer:hover, input#NewsletterForm--footer:focus {
 .collection-hero__title + .collection-hero__description {
   display: none;
 }
+
+.trustspot-inline-category:empty {
+  height: 40px;
+  display: block;
+}
+
+/* Mobile Responsive */
+@media (max-width: 767px) {
+  #product-grid .card__heading {
+    height: 33px;
+    overflow: hidden;
+  }
+  .trustspot-inline-category:empty {
+    display: none;
+  }
+}
