Fixed issue on shirt turns into a gray box before the shirt appears

--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -50,6 +50,10 @@
 .section--product-recommendations .badge{
     display: none;
 }
+.product__media.gradient.global-media-settings {
+    background: transparent;
+    background-color: transparent;
+}
 
 /* Mobile Responsive */
 @media (max-width: 767px) {
