--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1717,6 +1717,11 @@ input#NewsletterForm--footer:hover, input#NewsletterForm--footer:focus {
   display: none;
 }
 
+.product__media.gradient.global-media-settings {
+  background: transparent;
+  background-color: transparent;
+}
+
 /* Mobile Responsive */
 @media (max-width: 767px) {
   .breadcrumbs {
