--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1722,6 +1722,10 @@ input#NewsletterForm--footer:hover, input#NewsletterForm--footer:focus {
   background-color: transparent;
 }
 
+.instruction-list .instruction-content {
+  margin-bottom: 10px;
+}
+
 /* Mobile Responsive */
 @media (max-width: 767px) {
   .breadcrumbs {
