--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -54,6 +54,10 @@
     background: transparent;
     background-color: transparent;
 }
+.instruction-list .instruction-content{
+    margin-bottom: 10px;
+}
+
 
 /* Mobile Responsive */
 @media (max-width: 767px) {
