--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -272,7 +272,7 @@
 
     <script src="{{ 'app.js' | asset_url }}" defer></script>
    
-  
+{% include 'adroll' %}
 {% render 'oneclickupsellapp-theme', oneclickupsellapp: oneclickupsellapp %}
 {% assign oneclickupsellapp = true %}
 </body>
