Add google font support

--- a/snippets/dynamic-styles.liquid
+++ b/snippets/dynamic-styles.liquid
@@ -1,3 +1,7 @@
+{%- if settings.is_gfonts_enabled and settings.gfonts_import_html != blank -%}
+	{{ settings.gfonts_import_html }}
+{%- endif -%}
+
 {%- liquid
 	assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
 	assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
@@ -17,7 +21,13 @@
 		--font-body-weight: {{ settings.type_body_font.weight }};
 		--font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};				
 
-		--font-heading-family: {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
+		{%- capture heading_family -%}
+			{%- if settings.type_header_font_custom != blank -%}
+				{{ settings.type_header_font_custom }}, {{- -}}
+			{%- endif -%}
+			{{- settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families -}}
+		{%- endcapture -%}
+		--font-heading-family: {{ heading_family }};
 		--font-heading-style: {{ settings.type_header_font.style }};
 		--font-heading-weight: {{ settings.type_header_font.weight }};
 
