--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,8 +5,16 @@
 // @import './base/typography';
 
 @import './components/button';
-@import './components/hero-grid';
 
+// Sections
+// TODO: output sections in multiple css files and only import when needed
+@import './sections/featured-blog';
+@import './sections/featured-reviews';
+@import './sections/hero-grid';
+@import './sections/multicolumn';
+@import './sections/usp';
+
+// Shopify templates
 @import './templates/index';
 @import './templates/product';
 
