--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -31,33 +31,41 @@
               <input type="hidden" name="contact[tags]" value="newsletter">
               <div class="newsletter-form__field-wrapper">
                 <div class="field">
-                  <input
-                    id="NewsletterForm--{{ section.id }}"
-                    type="email"
-                    name="contact[email]"
-                    class="field__input"
-                    value="{{ form.email }}"
-                    aria-required="true"
-                    autocorrect="off"
-                    autocapitalize="off"
-                    autocomplete="email"
-                    {% if form.errors %}
-                      autofocus
-                      aria-invalid="true"
-                      aria-describedby="Newsletter-error--{{ section.id }}"
-                    {% elsif form.posted_successfully? %}
-                      aria-describedby="Newsletter-success--{{ section.id }}"
-                    {% endif %}
-                    placeholder="{{ 'newsletter.label' | t }}"
-                    required
-                  >
-                  <label class="field__label" for="NewsletterForm--{{ section.id }}">
-                    {{ 'newsletter.label' | t }}
-                  </label>
-                  <button type="submit" class="newsletter-form__button field__button" name="commit" id="Subscribe" aria-label="{{ 'newsletter.button_label' | t }}">
-                    {%- comment -%}{% render 'icon-arrow' %}{%- endcomment -%}
-                    {{ 'newsletter.button_label' | t }}
-                  </button>
+									<div class="columns is-vcentered">
+										<div class="column">
+											<div class="is-relative">
+												<input
+													id="NewsletterForm--{{ section.id }}"
+													type="email"
+													name="contact[email]"
+													class="field__input"
+													value="{{ form.email }}"
+													aria-required="true"
+													autocorrect="off"
+													autocapitalize="off"
+													autocomplete="email"
+													{% if form.errors %}
+														autofocus
+														aria-invalid="true"
+														aria-describedby="Newsletter-error--{{ section.id }}"
+													{% elsif form.posted_successfully? %}
+														aria-describedby="Newsletter-success--{{ section.id }}"
+													{% endif %}
+													placeholder="Your Email"
+													required
+												>
+												<label class="field__label" for="NewsletterForm--{{ section.id }}">
+													{{ 'newsletter.label' | t }}
+												</label>
+											</div>
+										</div>
+										<div class="column is-narrow">
+											<button type="submit" class="btn is-primary is-large" name="commit" aria-label="{{ 'newsletter.button_label' | t }}">
+												{%- comment -%}{% render 'icon-arrow' %}{%- endcomment -%}
+												Sign Up
+											</button>
+										</div>
+									</div>
                 </div>
                 {%- if form.errors -%}
                   <small class="newsletter-form__message form__message" id="Newsletter-error--{{ section.id }}">{% render 'icon-error' %}{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}</small>
