Image with text: modify color scheme styles

--- a/sections/featured-reviews.liquid
+++ b/sections/featured-reviews.liquid
@@ -14,7 +14,7 @@
 
 <div class="reviews page-accent--{{ section.settings.color_accent }}">
 	<div class="page-width isolate section-{{ section.id }}-padding">
-		<h2 class="section-title has-text-centered">Testimonials</h2>
+		<h2 class="section-title h1 has-text-centered">Some Testimonials</h2>
 
 		{%- capture reviews_html -%}
 			{%- for block in section.blocks -%}
