--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,6 +11,7 @@
 @import './sections/featured-blog';
 @import './sections/featured-reviews';
 @import './sections/hero-grid';
+@import './sections/image-with-text';
 @import './sections/multicolumn';
 @import './sections/usp';
 
