--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -13,6 +13,7 @@
 @import './sections/hero-grid';
 @import './sections/image-with-text';
 @import './sections/multicolumn';
+@import './sections/newsletter';
 @import './sections/usp';
 
 // Shopify templates
