Featured collection: Apply base styles from figma

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,6 +9,7 @@
 // Sections
 // TODO: output sections in multiple css files and only import when needed
 @import './sections/featured-blog';
+@import './sections/featured-collection';
 @import './sections/featured-reviews';
 @import './sections/hero-grid';
 @import './sections/image-with-text';
