--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,6 +15,7 @@
 @import './sections/image-with-text';
 @import './sections/multicolumn';
 @import './sections/newsletter';
+@import './sections/recent-posts';
 @import './sections/usp';
 
 // Shopify templates
