--- a/sections/featured-collection-v2.liquid
+++ b/sections/featured-collection-v2.liquid
@@ -367,22 +367,14 @@
       "content": "t:sections.all.padding.section_padding_heading"
     },
     {
-      "type": "range",
+      "type": "number",
       "id": "padding_top",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
       "label": "t:sections.all.padding.padding_top",
       "default": 36
     },
     {
-      "type": "range",
+      "type": "number",
       "id": "padding_bottom",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
       "default": 36
     }
