--- a/sections/featured-reviews.liquid
+++ b/sections/featured-reviews.liquid
@@ -1,8 +1,8 @@
 {%- style -%}
-  .section-{{ section.id }}-padding {
+  /* .section-{{ section.id }}-padding {
     padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
     padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
-  }
+  } */
 
   @media screen and (min-width: 750px) {
     .section-{{ section.id }}-padding {
@@ -79,24 +79,16 @@
       "content": "t:sections.all.padding.section_padding_heading"
     },
     {
-      "type": "range",
+      "type": "number",
       "id": "padding_top",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
       "label": "t:sections.all.padding.padding_top",
-      "default": 40
+      "default": 36
     },
     {
-      "type": "range",
+      "type": "number",
       "id": "padding_bottom",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
-      "default": 52
+      "default": 36
     }
   ],
 
