--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -82,24 +82,16 @@
       "content": "t:sections.all.padding.section_padding_heading"
     },
     {
-      "type": "range",
+      "type": "number",
       "id": "padding_top",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
       "label": "t:sections.all.padding.padding_top",
-      "default": 40
+      "default": 58
     },
     {
-      "type": "range",
+      "type": "number",
       "id": "padding_bottom",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
-      "default": 52
+      "default": 44
     }
   ],
   "blocks": [
