--- a/src/scss/sections/newsletter.scss
+++ b/src/scss/sections/newsletter.scss
@@ -1,18 +1,54 @@
 .newsletter {
   $self: &;
 
+  &__wrapper {
+    background: #000;
+    color: #fff;
+  }
+
+
   .s-newsletter & {
     // overrides here
+    &__heading {
+      margin-bottom: 20px;
+    }
+    &__subheading {
+      margin-bottom: 24px;
+    }
+
+    .field .columns {
+      width: calc(100% + 1.5rem);
+    }
+
+    &__form-submit.is-large {
+      height: 100%;
+      min-width: 1px !important;
+
+      @include mobile {
+        width: 100%;
+        height: 45px;
+      }
+    }    
   }
 
   input[type="email"].field__input {
     background: #FFFFFF;
     border: 1px solid #FFFFFF;
     padding: 16px 24px;
-    color: $color-mono-1;
-  }
+    font-family: 'Now';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 150%;
+    letter-spacing: -0.02em;
 
-  &__form-submit {
-    height: 100%;
+    &:focus {
+      // box-shadow: none;
+      box-shadow: 0 0 0 calc(0.1rem + var(--inputs-border-width)) rgba(#F05423, 0.9);
+    }
+
+    &::placeholder {
+      color: $color-mono-1;
+    }
   }
 }
