--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -85,6 +85,19 @@
 								<p class="image-with-text__text image-with-text__text--caption {{ block.settings.text_style }} {{ block.settings.text_style }}--{{ block.settings.text_size }} {{ block.settings.text_style }}" {{ block.shopify_attributes }}>{{ block.settings.caption | escape }}</p>
 							{%- when 'text' -%}
 								<div class="image-with-text__text rte {{ block.settings.text_style }}" {{ block.shopify_attributes }}>{{ block.settings.text }}</div>
+							{%- when 'list' -%}
+								{%- if block.settings.items != blank -%}
+									{% comment %} Convert textarea lines into array items {% endcomment %}
+									{%- assign list_items = block.settings.items | newline_to_br | strip_newlines | split: '<br />' -%}
+									<div class="image-with-text__list rte" {{ block.shopify_attributes }}>
+										<ul>
+											{%- for list_item in list_items -%}
+												<li>{{ list_item }}</li>
+											{%- endfor -%}
+										</ul>
+									</div>
+								
+								{%- endif -%}
 							{%- when 'button' -%}
 								{%- if block.settings.button_label != blank -%}
 									<a{% if block.settings.button_link == blank %}
@@ -421,6 +434,21 @@
         }
       ]
     },
+    {
+      "type": "list",
+      "name": "Bulleted List",
+      "limit": 1,
+      "settings": [
+				{
+					"type": "textarea",
+					"id": "items",
+					"label": "List Items",
+					"info": "Enter one per line"
+				}
+      ]
+    },
+
+		
     {
       "type": "button",
       "name": "t:sections.image-with-text.blocks.button.name",
