--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -91,6 +91,8 @@
 			{{ 'app.css' | asset_url | stylesheet_tag }}
 		{%- endif -%}
 
+		{%- section 'global-product-badges' -%}
+
     {%- unless settings.type_body_font.system? -%}
       <link rel="preload" as="font" href="{{ settings.type_body_font | font_url }}" type="font/woff2" crossorigin>
     {%- endunless -%}
