Image with text: apply correct styling for richtext

--- a/src/scss/sections/image-with-text.scss
+++ b/src/scss/sections/image-with-text.scss
@@ -42,6 +42,13 @@
         order: -1;
       }
     }
+
+    .rte.body {
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 150%;
+      letter-spacing: -0.03em;
+    }
   }
   &__content {
     #{ $self }--scheme-background-1 &,
